--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,39 +32,68 @@
     </div>
     <div class="row marketing">
       <div class="col-lg-6">
-        <h2>Course sponsors</h2>
+        <h2 id="header_sponsors_contacts">Course sponsors</h2>
       </div>
       <div class="col-lg-6">
-        <h4>Director</h4>
+        <h4 class="sponsors_title">Director</h4>
         <ul>
+        <table class="contacts_table">
+        <tr>
+        <td rowspan="2" class="contacts_td"><img class="contacts_image" src=
+      "../static/images/imagehere.jpg"></td>
+          <td class="contacts_td">
           <li>Name: Ivan Bondarenko</li>
           <li>Skype: VanyaBon</li>
           <li>Email: VanyaBon@gmail.com</li>
           <li>Phone: 050 555 55 50</li>
           <li>Address: Kharkiv, home</li>
+          </td>
+
+          </tr>
+        </table>
+
         </ul>
-        <h4>Manager</h4>
+        <h4 class="sponsors_title">Manager</h4>
         <ul>
+        <table class="contacts_table">
+          <tr>
+          <td rowspan="2" class="contacts_td"><img class="contacts_image" src=
+      "../static/images/imagehere.jpg"></td>
+          <td class="contacts_td">
           <li>Name: Daria Mykhalevych</li>
           <li>Skype: darka.darka.darka.darka.</li>
           <li>Email: daria.mykhalevych@gmail.com</li>
           <li>Phone: +38 096 469 15 57</li>
           <li>Address: Kharkiv, home</li>
+          </td>
+
+          </tr>
+        </table>
         </ul>
-        <h4 class="">Founder</h4>
+        <h4 class="sponsors_title">Founder</h4>
         <ul>
+        <table class="contacts_table">
+        <tr>
+        <td rowspan="2" class="contacts_td"><img class="contacts_image" src=
+      "../static/images/imagehere.jpg"></td>
+          <td class="contacts_td">
           <li>Name: Pavel Obod</li>
           <li>Skype: azaless</li>
           <li>Email: itbursa100@gmail.com</li>
           <li>Phone: 050 555 55 55</li>
           <li>Address: Kharkiv, home</li>
+          </td>
+
+          </tr>
+        </table>
         </ul>
       </div>
     </div>
-    <footer class="footer">
-      <p class="text-right">© 2015</p>
-    </footer>
+
   </div><!-- /container -->
+  <footer class="footer">
+  </footer>
+
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="../static/js/bootstrap.js">
   </script>
