--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -32,7 +32,7 @@
     </div>
     <div class="row marketing">
       <div class="col-lg-6">
-      <h2>Romanova Natalia</h2><img class="imagehere" src=
+      <h2 class="text-left">Romanova Natalia</h2><img class="imagehere" src=
       "../static/images/imagehere.jpg"></div>
       <div class="col-lg-6 grey_border_line">
         <h4>Student's card</h4>
@@ -48,7 +48,7 @@
             <td>Natalia</td>
           </tr>
           <tr>
-            <td class="table_head">Patronimyc</td>
+            <td class="table_head">Patronymic</td>
             <td>Epshtain</td>
           </tr>
           <tr>
@@ -86,7 +86,7 @@
       </div>
       <div class="col-lg-6">
         <table id="performance">
-          <tr class="table_head dark_grey_row">
+          <tr class="table_head dark_grey_row  text-center" >
             <td>Course</td>
             <td>Week</td>
             <td>Control type</td>
@@ -118,10 +118,10 @@
         </table>
       </div>
     </div>
-    <footer class="footer">
-      <p class="text-right">© 2015</p>
-    </footer>
+
   </div><!-- /container -->
+  <footer class="footer">
+    </footer>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="../static/js/bootstrap.js">
   </script>
