student_list.html added 3.0

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,13 +17,13 @@
     <div class="header clearfix">
       <nav>
         <ul class="nav nav-pills pull-right">
-          <li role="presentation">
+          <li role="presentation" class="text-left">
             <a href="index.html">Main</a>
           </li>
-          <li role="presentation">
+          <li role="presentation" class="text-center">
             <a href="student_list.html">Students</a>
           </li>
-          <li role="presentation">
+          <li role="presentation" class="text-right">
             <a href="contact.html">Contacts</a>
           </li>
         </ul>
@@ -36,62 +36,69 @@
       </div>
       <div class="col-lg-6">
         <h4 class="sponsors_title">Director</h4>
-        <ul>
+
         <table class="contacts_table">
         <tr>
         <td rowspan="2" class="contacts_td"><img class="contacts_image" src=
       "../static/images/imagehere.jpg"></td>
           <td class="contacts_td">
+          <ul>
           <li>Name: Ivan Bondarenko</li>
           <li>Skype: VanyaBon</li>
           <li>Email: VanyaBon@gmail.com</li>
           <li>Phone: 050 555 55 50</li>
           <li>Address: Kharkiv, home</li>
+          </ul>
           </td>
 
           </tr>
         </table>
 
-        </ul>
+
         <h4 class="sponsors_title">Manager</h4>
-        <ul>
+
         <table class="contacts_table">
           <tr>
           <td rowspan="2" class="contacts_td"><img class="contacts_image" src=
       "../static/images/imagehere.jpg"></td>
           <td class="contacts_td">
+          <ul>
           <li>Name: Daria Mykhalevych</li>
           <li>Skype: darka.darka.darka.darka.</li>
           <li>Email: daria.mykhalevych@gmail.com</li>
           <li>Phone: +38 096 469 15 57</li>
           <li>Address: Kharkiv, home</li>
+           </ul>
           </td>
 
           </tr>
         </table>
-        </ul>
+
         <h4 class="sponsors_title">Founder</h4>
-        <ul>
+
         <table class="contacts_table">
         <tr>
         <td rowspan="2" class="contacts_td"><img class="contacts_image" src=
       "../static/images/imagehere.jpg"></td>
           <td class="contacts_td">
+          <ul>
           <li>Name: Pavel Obod</li>
           <li>Skype: azaless</li>
           <li>Email: itbursa100@gmail.com</li>
           <li>Phone: 050 555 55 55</li>
           <li>Address: Kharkiv, home</li>
+          </ul>
           </td>
 
           </tr>
         </table>
-        </ul>
+
       </div>
     </div>
 
   </div><!-- /container -->
   <footer class="footer">
+    <p class="sr-only">Byrsa</p>
   </footer>
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
