--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -17,13 +17,13 @@
     <div class="header clearfix">
       <nav>
         <ul class="nav nav-pills pull-right">
-          <li role="presentation">
+          <li role="presentation" class="text-left">
             <a href="index.html">Main</a>
           </li>
-          <li role="presentation">
+          <li role="presentation" class="text-center">
             <a href="student_list.html">Students</a>
           </li>
-          <li role="presentation">
+          <li role="presentation" class="text-right">
             <a href="contact.html">Contacts</a>
           </li>
         </ul>
@@ -86,7 +86,7 @@
       </div>
       <div class="col-lg-6">
         <table id="performance">
-          <tr class="table_head dark_grey_row  text-center" >
+          <tr class="table_head dark_grey_row" >
             <td>Course</td>
             <td>Week</td>
             <td>Control type</td>
