--- a/templates/contact.html
+++ b/templates/contact.html
@@ -41,7 +41,7 @@
           <ul class="nav nav-justified">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
+            <li class=><a href="student_list.html">Students</a></li>
           </ul>
         </nav>
       </div>
