--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -63,7 +63,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>1</td>
+          <td><a href="student_detail.html">1</a></td>
           <td>Persianova</td>
           <td>Olena</td>
           <td>Украина, г.Харьков, ул.Иванова, д.36, кв.3</td>
