--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -21,6 +21,7 @@
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../static/js/ie-emulation-modes-warning.js"></script>
     <script src="../static/js/bootstrap.js"></script>
+    <script src="../static/js/user-scripts.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -38,24 +39,117 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li class="active"><a href="index.html">Main</a></li>
+            <li><a href="index.html">Main</a></li>
             <li><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </nav>
       </div>
       <!-- Jumbotron -->
-      <div class="jumbotron first_block">
-        <h1>Description</h1>
-        <p>PyBursa, JSBursa, JavaBursa - professional courses</p>
-        <p class="lead">Sign up for courses Python. Hit the modern trend. WEB development</p>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Olena Persianova</h2>
+          <img src="../static/images/olena_p.jpg" class="img-responsive img-rounded">
+          <hr>
+          <table class="table table-hover left table-responsive">
+          <thead>
+          <tr>
+            <th colspan="2">Studen card</th>
+          </tr>
+          </thead>
+            <tbody>
+              <tr>
+                <td>Surname</td>
+                <td>Persianova</td>
+              </tr>
+              <tr>
+                <td>Name</td>
+                <td>Olena</td>
+              </tr>
+              <tr>
+                <td>Patronymic</td>
+                <td>Yuriivna</td>
+              </tr>
+              <tr>
+                <td>Birth Date</td>
+                <td>11/02/1989</td>
+              </tr>
+              <tr>
+                <td>Address</td>
+                <td>Украина, г.Харьков, ул.Иванова, д.36, кв.3</td>
+              </tr>
+              <tr>
+                <td>E-mail</td>
+                <td>olena.persianova@gmail.com</td>
+              </tr>
+              <tr>
+                <td>Rating</td>
+                <td>20</td>
+              </tr>
+              <tr>
+                <td>Average Grade</td>
+                <td>99.9</td>
+              </tr>
+              <tr>
+                <td>Skype</td>
+                <td>olena.persianova</td>
+              </tr>              
+            </tbody>
+          </table>
+        </div>
+      <div class="col-md-4 col-md-offset-4">
+        <div style="margin-top: 20px; margin-bottom: 10px;">
+          <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
+          <li><a href="https://www.python.org/">О Python (официальный сайт)</a></li>
+          <li><a href="http://pybursa.com/">Организация</a></li>
+          <li><a href="http://pybursa.com/">Цены</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
-      </div>
       <hr>
-      <div class="jumbotron second_block">
-        <h2>Program</h2>
-            <p>Basics of Python. Lines and iterators. Functions and modularity. Libraries and the package manager</p>
-            <p><a class="btn btn-lg btn-success" href="http://pybursa.com/" role="button">Get started today</a></p>
-      </div>
+      <div container-fluid>
+      <p><b>Perfomance</b></p>
+        <table class="table left table-responsive">
+          <thead>
+          <tr>
+            <th>Course</th>
+            <th>Week</th>
+            <th>Control Type</th>
+            <th>Grade</th>
+          </tr>
+          </thead>
+            <tbody>
+              <tr>
+                <td rowspan="6">PY102 Введение в Python</td>
+                <td rowspan="3">Week 1</td>
+                <td>Tests</td>
+                <td>99.9%</td>
+              </tr>
+              <tr>
+                <td>Problem task №1</td>
+                <td>100%</td>
+              </tr>
+              <tr>
+                <td>Problem task №2</td>
+                <td>100%</td>
+              </tr>
+                <td rowspan="3">Week 2</td>
+                <td>Tests</td>
+                <td>100%</td>
+              </tr>
+              <tr>
+                <td>Problem task №1</td>
+                <td>100%</td>
+              </tr>
+              <tr>
+                <td>Problem task №2</td>
+                <td>100%</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       <!-- Site footer -->
       <footer class="footer">
         <p>&copy; ItBursa 2015</p>
