added unique title to new pages

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>PyBursa - professional courses</title>
+    <title>Список студентов PyBursa на 2015 год</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
