--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>PyBursa - professional courses</title>
+    <title>PyBursa - detail students</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
