--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 .first_block {
  text-align: center;
-background-color: green;
+background-color: #5cb85c;
 color: #fff;
 }
 .jumbotron .btn {
@@ -38,14 +38,14 @@ color: #fff;
   font-weight: bold;
   color: #777;
   text-align: center;
-  background-color: #e5e5e5; /* Old browsers */
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e5e5e5));
-  background-image: -webkit-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
-  background-image:      -o-linear-gradient(top, #f5f5f5 0%, #e5e5e5 100%);
-  background-image:         linear-gradient(to bottom, #f5f5f5 0%,#e5e5e5 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+  background-color: #777; /* Old browsers */
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#777));
+  background-image: -webkit-linear-gradient(top, #eee 0%, #777 100%);
+  background-image:      -o-linear-gradient(top, #eee 0%, #777 100%);
+  background-image:         linear-gradient(to bottom, #eee 0%,#777 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eee', endColorstr='#777',GradientType=0 ); /* IE6-9 */
   background-repeat: repeat-x; /* Repeat the gradient */
-  border-bottom: 1px solid #d5d5d5;
+  border-bottom: 1px solid @gray-light;
 }
 .nav-justified > .active > a,
 .nav-justified > .active > a:hover,
@@ -68,7 +68,7 @@ color: #fff;
     max-height: 52px;
   }
   .nav-justified > li > a {
-    border-right: 1px solid #d5d5d5;
+    border-right: 1px solid @gray-light;
     border-left: 1px solid #fff;
   }
   .nav-justified > li:first-child > a {
@@ -92,7 +92,7 @@ color: #fff;
   }
 }
 .text-muted {
-  color: green;
+  color: #5cb85c;
 }
 .col-lg-4 b {
   color: red;
@@ -101,6 +101,6 @@ color: #fff;
   text-align: left;
 }
 thead {
-  background-color: green;
+  background-color: #5cb85c;
   color: #fff;
 }
