added problem task in personal card

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -87,6 +87,9 @@
                 <td>20</td>
               </tr>
               <tr>
+              <td>Problem Task</td>
+              <td>100%</td>
+              <tr>
                 <td>Average Grade</td>
                 <td>99.9</td>
               </tr>
