--- a/templates/contact.html
+++ b/templates/contact.html
@@ -35,15 +35,17 @@
             <li class="active">
               <a href="contact.html">Contacts</a>
             </li>
+            <li>
+              <a href="student_list.html">Students</a>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
     <div class="transparent">
-    <div class="bord">
     <div class="jumbotron">
-      <h1 class="change shad shadred">iBursa</h1>
+      <h1 class="change shad">iBursa</h1>
       <h2 class="change">Contacts</h2>
       <hr>
       <ul>
