--- a/templates/index.html
+++ b/templates/index.html
@@ -35,17 +35,18 @@
             <li>
               <a href="contact.html">Contacts</a>
             </li>
+            <li>
+              <a href="student_list.html">Students</a>
+            </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div><!--/.container-fluid -->
     </nav>
     <!-- Main component for a primary marketing message or call to action -->
     <div class="transparent">
-    <div class="bord">
     <div class="jumbotron">
-      <h1>iBursa</h1>
-      <h2>Description</h2>
-      <p class="smalll">of our courses</p>
+      <h1 class="change shad">iBursa</h1>
+      <h2 class="change">Description</h2>
       <div class="opa">
       <p class="just">This course introduces the student to the Python language. Upon
       completion of this class, the student will be able to write non trivial
