--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                     <p>Ready to start your next project or work with linux?</p>
                     <h2 class="section-heading">Description:</h2>
                     <hr class="primary">
-                    <p>Part One:<br>Intro to linux<br>Filesystem ext4<br>Command line in linux<br>Coming soon...<br><br></p>
+                    <p>Part One:<br>Intro to linux<br>Filesystem ext4<br>Command line in linux<br>Coming soon...<br></p>
                 </div>
             </div>
         </div>
