--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -52,7 +52,47 @@
     <header> 
         <div class="header-content">
             <div class="header-content-inner">
-                <h2>Students:</h2>
+                <h3>Student's card: Anton Popov</h3>
+                <table class="table table-hover table-bordered">
+                <tbody>
+                    <tr>
+                       <td>Surname</td>
+                       <td>Popov</td>                
+                    </tr>
+                    <tr>
+                       <td>Name</td>
+                       <td>Anton</td>                
+                    </tr>
+                    <tr>
+                       <td>Patronymic</td>
+                       <td>Viktorovich</td>                
+                    </tr>
+                    <tr>
+                       <td>Birth Date</td>
+                       <td>June 12, 1987</td>                
+                    </tr>
+                    <tr>
+                       <td>Address</td>
+                       <td>Kharkiv, Dostoevskogo str, 21</td>                
+                    </tr>
+                    <tr>
+                       <td>E-mail</td>
+                       <td>tishick_123@gmail.com</td>                
+                    </tr>
+                    <tr>
+                       <td>Skype</td>
+                       <td>toshikpopov</td>                
+                    </tr>
+                    <tr>
+                       <td>Average Grade, %</td>
+                       <td>77</td>                
+                    </tr>
+                    <tr>
+                       <td>Rating</td>
+                       <td>7</td>                
+                    </tr>
+                 </tbody>
+             </table>     
             </div>
         </div>
     </header>
