--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -53,6 +53,57 @@
         <div class="header-content">
             <div class="header-content-inner">
                 <h2>Students:</h2>
+                <div class="table-responsive">
+        <table class="table table-bordered">
+            <thead>
+              <tr class="success">
+                <td><font color = "000000">No</font></td>
+                <td><font color = "000000">Surname</font></td>
+                <td><font color = "000000">Name</font></td>
+                <td><font color = "000000">Adress</font></td>
+                <td><font color = "000000">Skype</font></td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="student_detail.html">01</a></td>
+                <td>Popov</td>
+                <td>Anton</td>
+                <td>Kharkiv, Dostoevskogo str, 21</td>
+                <td>toshikpopov</td>                
+              </tr>
+              <tr>
+                <td>02</td>
+                <td>Surname2</td>
+                <td>Name2</td>
+                <td>Adress2</td>
+                <td>Skype2</td>                
+              </tr>
+              <tr>
+                <td>03</td>
+                <td>Surname3</td>
+                <td>Name3</td>
+                <td>Adress3</td>
+                <td>Skype3</td>             
+              </tr>
+              <tr>
+                <td>04</td>
+                <td>Surname4</td>
+                <td>Name4</td>
+                <td>Adress4</td>
+                <td>Skype4</td>
+              </tr>
+              <tr>
+                <td>05</td>
+                <td>Surname5</td>
+                <td>Name5</td>
+                <td>Adress5</td>
+                <td>Skype5</td>
+              </tr>
+            </tbody>
+        </table>
+      </div>
+    </div>
             </div>
         </div>
     </header>
