Fix some problem.

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
 
-    <title>Linux_Bursa - Student details</title>
+    <title>Linux_Bursa - Student's card</title>
 
 
 
@@ -37,10 +37,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="contact.html">Contacts</a>
-                    </li>
-                    <li>
-                      <a class="page-scroll" href="student_list.html">Students</a>
+                      <a href="contact.html">Contacts</a>
+                      <a href="student_list.html">Students</a>
                     </li>
                 </ul>
             </div>
