--- a/templates/index.html
+++ b/templates/index.html
@@ -35,10 +35,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="contact.html">Contacts</a>
-                    </li>
-                    <li>
-                      <a class="page-scroll" href="student_list.html">Students</a>
+                      <a href="contact.html">Contacts</a>
+                      <a href="student_list.html">Students</a>
                     </li>
                 </ul>
             </div>
