--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -37,10 +37,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="contact.html">Contacts</a>
-                    </li>
-                    <li>
-                      <a class="page-scroll" href="student_list.html">Students</a>
+                      <a href="contact.html">Contacts</a>
+                      <a href="student_list.html">Students</a>
                     </li>
                 </ul>
             </div>
