--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,6 +22,7 @@
   <li role="presentation" class="active"><a href="#">PyBursa</a></li>
   <li role="presentation"><a href="index.html">Main</a></li>
   <li role="presentation"><a href="#">Contacts</a></li>
+  <li role="presentation"><a href="student_list.html">Students</a></li>
 </ul>
 <div class="container">
 <div class="panel panel-default">
