--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
   <li role="presentation" class="active"><a href="#">PyBursa</a></li>
   <li role="presentation"><a href="#">Main</a></li>
   <li role="presentation"><a href="contact.html">Contacts</a></li>
+  <li role="presentation"><a href="student_list.html">Students</a></li>
 </ul>
 <div class="container">
 <div class="jumbotron">
