--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Site about organizers of PyBursa courses</title>
+    <title>Site about Popov Ivan - student of PyBursa courses</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, contact!</h1>
+    <h1>Hello, Popov Ivan</h1>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -32,42 +32,74 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">        
         <li><a href="index.html">Main</a></li>
-		<li class="active"><a href="contact.html">Contact<span class="sr-only">(current)</span></a></li>
-		<li><a href="student_list.html">Student</a></li>
-      </ul>   
-      
+		<li><a href="contact.html">Contact</a></li>
+		<li class="active"><a href="student_list.html">Student<span class="sr-only">(current)</span></a></li>
+      </ul>       
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-lg-4">
-		<h2>Director</h2>
-			Name: Mr. Ben
-			Skype: mrben
-			Email: mrben@gmail.com
-		</div>
-		
-		<div class="col-lg-4">
-		<h2>Manager</h2>				
-			Name: Mr. Ron
-			Skype: mrron
-			Email: mrron@gmail.com
-		
-		</div>
-		
-		<div class="col-lg-4">
-		<h2>Founder</h2>			
-			Name: Miss. Murple
-			Skype: missmurple
-			Email: missmurple@gmail.com
-		
-		</div>
-		
+		<div class="row-lg-4">
+		<h2>Popov Ivan</h2>
+			<img src="../static/images/kis.jpg" 
+        alt="Photo"></p> 			
+		</div>	
+	</div>
+</div>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-3">
+			<h2>About yourself</h2>
+			<table class="table">
+			 <thead>
+				<tr>	
+				</tr>
+			 </thead>
+			 <tbody>
+				<tr>
+					<td>Surname</td>
+					<td>Popov</td>		
+				</tr>
+				<tr>					
+					<td>Name</td>	
+					<td>Ivan</td>					
+				</tr>
+				<tr>					
+					<td>Patronymic</td>
+					<td>Nikolayevich</td>		
+				</tr>
+				<tr>
+					<td>Rating</td>
+					<td>20</td>		
+				</tr>
+				<tr>
+					<td>Birth Date</td>
+					<td>11/02/1989</td>		
+				</tr>
+				<tr>
+					<td>Adress</td>
+					<td>Ukraine, Knarkov, street 1</td>
+				</tr>
+				<tr>
+					<td>Email</td>
+					<td>sabaka@gmail.com</td>
+				</tr>
+				<tr>
+					<td>Skype</td>
+					<td>popov.ivan</td>
+				</tr>
+			 </tbody>
+			 </table>
+						
+		</div>	
+	</div>
+</div>
 		
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
