--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
         <li><a href="contact.html">Contact</a></li>
+		<li><a href="student_list.html">Student</a></li>
      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
