--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -21,15 +21,15 @@
   <body class="area">
    
     <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+      <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
       <!-- <a class="navbar-brand" href="#">PyBursa</a>-->
     <!-- <div class="navbar-brand" >Bursa
 </div>-->
@@ -49,13 +49,13 @@
 </nav>
 
 <div class="center bold page-header">
-  <h1>Students of course <small class="font">PYTHON</small></h1>
+  <h1>Students of course PyBursa</h1>
 </div>
 
- <!-- Table class="table align-justify"-->
+<!-- Table class="table align-justify"-->
   <table  class="jewel" >
 <tr>
- <th>No</th><th>Surname</th><th>Name</th><th>Adress</th><th>Skype</th>
+ <th>No</th><th>Surname</th><th>Name</th><th>Address</th><th>Skype</th>
  </tr> 
 
 <tr class="odd">
