--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 		      </div>
 		      <div id="navbar" class="navbar-collapse collapse">
 		        <ul class="nav navbar-nav">
-		  	      <li class="active"><a href="#">Main</a></li>
+		  	      <li class="active"><a href="index.html">Main</a></li>
 		          <li><a href="contact.html">Contacts</a></li>
 		          <li><a href="student_list.html">Students</a></li>
 		        </ul>
