Last of the last try

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -73,7 +73,7 @@
 						<td>21</td>
 					</tr>
 					<tr>
-						<th>Average</th>
+						<th>Average Grade</th>
 						<td>99.9</td>
 					</tr>
 	        <tr>
