--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,7 +25,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="index.html">
-              <img class="logo" alt="logo" src="../static/images/logo_itbursa.png"/>
+              <img class="logo" alt="logo" src="../static/images/logo_itbursa.png">
             </a>
           </div>
             <ul class="nav nav-pills">
@@ -34,67 +34,89 @@
             </ul>
         </div>
       </nav>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-4">
-            <a class="container-fluid">
-              <img src="../static/images/director.jpg" alt="image">
-            </a>
-          </div>
-          <div class="col-md-8">
-            <div class="panel panel-primary">
-              <div class="panel-body">
-                <h4 class="prenames">Director</h4>
-              </div>
-              <div class="panel-footer">
-                <table class="table table-condensed">
-                  <tr class="names">
-                    <td class="name">Name</td>
-                    <td class="skype">Skype</td>
-                    <td class="email">Email</td>
-                    <td class="phone">Phone</td>
-                  </tr>
-                  <tr class="data">
-                    <td class="name">Jonh Smith</td>
-                    <td class="skype">Smith'sSkype</td>
-                    <td class="email">johnsmith@email.com</td>
-                    <td class="phone">+380 555 765 48 90</td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-          </div>
-        </div>
-          <h4 class="prenames">Manager</h4>
-            <table class="table table table-condensed">
-              <tr class="names">
-                  <td class="name">Name</td>
-                  <td class="skype">Skype</td>
-                  <td class="email">Email</td>
-                  <td class="phone">Phone</td>
-              </tr>
-              <tr class="data">
-                <td class="name">Jonh Rambo</td>
-                <td class="skype">Rambo'sSkype</td>
-                <td class="email">knife@email.com</td>
-                <td class="phone">+380 555 765 48 91</td>
-              </tr>
-            </table>
-           <h4 class="prenames">Founder</h4>
-            <table class="table table table-condensed">
-              <tr class="names">
-                  <td class="name">Name</td>
-                  <td class="skype">Skype</td>
-                  <td class="email">Email</td>
-                  <td class="phone">Phone</td>
-              </tr>
-              <tr class="data">
-                <td class="name">Donald Trumph</td>
-                <td class="skype">Trumph'sSkype</td>
-                <td class="email">money@email.com</td>
-                <td class="phone">+380 555 888 88 88</td>
-              </tr>
-            </table>
+      <div id="table_contact" class="panel panel-primary">
+        <table class="table table-condensed">
+          <thead class="panel-body">
+            <tr>
+              <th colspan="5">Director</th>
+            </tr>
+          </thead>
+          <tbody class="panel-footer">
+            <tr class="format_data" >
+              <td class="contact_photo" rowspan="2">
+                <a>
+                  <img src="../static/images/director.jpg" alt="image">
+                </a>
+              </td>
+              <td>Name</td>
+              <td>Skype</td>
+              <td>E-mail</td>
+              <td>Phone No</td>
+            </tr>
+            <tr>
+              <td>Jonh Smith</td>
+              <td>Smith'sSkype</td>
+              <td>johnsmith@email.com</td>
+              <td>+380 555 765 48 90</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div id="table_contact" class="panel panel-primary">
+        <table class="table table-condensed">
+          <thead class="panel-body">
+            <tr>
+              <th colspan="5">Manager</th>
+            </tr>
+          </thead>
+          <tbody class="panel-footer">
+            <tr class="format_data" >
+              <td class="contact_photo" rowspan="2">
+                <a>
+                  <img src="../static/images/manager.jpg" alt="image">
+                </a>
+              </td>
+              <td>Name</td>
+              <td>Skype</td>
+              <td>E-mail</td>
+              <td>Phone No</td>
+            </tr>
+            <tr>
+              <td>Jonh Rambo</td>
+              <td>Rambo'sSkype</td>
+              <td>knife@email.com</td>
+              <td>+380 555 765 48 91</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div id="table_contact" class="panel panel-primary">
+        <table class="table table-condensed">
+          <thead class="panel-body">
+            <tr>
+              <th colspan="5">Manager</th>
+            </tr>
+          </thead>
+          <tbody class="panel-footer">
+            <tr class="format_data" >
+              <td class="contact_photo" rowspan="2">
+                <a>
+                  <img src="../static/images/donald.jpg" alt="image">
+                </a>
+              </td>
+              <td>Name</td>
+              <td>Skype</td>
+              <td>E-mail</td>
+              <td>Phone No</td>
+            </tr>
+            <tr>
+              <td>Donald Trumph</td>
+              <td>Trumph'sSkype</td>
+              <td>money@email.com</td>
+              <td>+380 555 888 88 88</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
