--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -18,7 +18,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body class="area">
   	<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -56,7 +56,7 @@
 <div class="center">
 <h1>Olena Persianova</h1> </div>
 <!-- Table class="table align-justify "-->
-<table border="1" cellpadding="10">
+<table class="table-color" border="1" cellpadding="10">
 
 <tr > 
 <td class="bold">Surname</a></td>
