--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -27,6 +27,13 @@
 	    text-align: left; /* Выравнивание по левому краю */
 	   }
 	</style>
+	<style>
+		body{background-image: url('../static/images/pic2.jpg') !important;
+		background-repeat: none; 
+		background-attachment: fixed;
+		background-size: 100%; 
+		background-position: center top}
+	</style>
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -63,23 +70,21 @@
 	  </div><!-- /.container-fluid -->
 	</nav>	
 	<div class="jumbotron">
-	  <img src="../static/images/img1.gif" width="100px" height="100px">		
-	  <h1>Ivanov Petr</h1>
+	  <img src="../static/images/pic3.jpg" width="100px" height="100px" class="img-circle">	
+	  <h1>Ivanova Anna</h1>
 	  <p>Student's card ITBursa</p>
-	  <p><a class="btn btn-primary btn-lg" href="student_list.html" role="button">About me</a></p>
-	</div>
-
-	  <!-- Table -->
+	   <!-- Table -->
 	  <table class="table">
-	    <tr><td>Surname</td><td>Ivanov</td>
-	    <tr><td>Name</td><td>Petr</td>
-	    <tr><td>Patronymic</td><td>PetrI</td>
+	    <tr><td>Surname</td><td>Ivanova</td>
+	    <tr><td>Name</td><td>Anna</td>
+	    <tr><td>Patronymic</td><td>IvanovaA</td>
 	    <tr><td>Birth Date</td><td>28.01.1983</td>
-	    <tr><td>Address</td><td>Mira 20</td>
-	    <tr><td>E-mail</td><td>Petr@ukr.net</td>
-	    <tr><td>Skype</td><td>PetrI</td>	
+	    <tr><td>Address</td><td>20A, Mira street, apt. 140, Kharkiv</td>
+	    <tr><td>E-mail</td><td>Anna@ukr.net</td>
+	    <tr><td>Skype</td><td>A.Ivanova</td>	
 	  </table>
 	</div>
+
 	<table class="table">
 	    <tr>
 	        <th>Course</th>
@@ -96,6 +101,7 @@
 	    <tr><td></td><td>Wee2</td><td>Tests</td><td>100%</td></tr>
 	</table>
 	</div>
+	<img src="../static/images/img1.gif" width="100px" height="100px">	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
