--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,6 +7,13 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Contacts</title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <style>
+		body{background-image: url('../static/images/pic4.jpg') !important;
+		background-repeat: none; 
+		background-attachment: fixed;
+		background-size: 100%; 
+		background-position: center top}
+	</style>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -46,13 +53,12 @@
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
 	    <div class="thumbnail">
-	      <img src="../static/images/pic2.jpg" width="100px" height="100px">
+	      <img src="../static/images/pic6.jpg" width="100px" height="100px" class="img-circle">
 	      <div class="caption">
 	        <h3>Director</h3>
-	        <p>Name: Ivan Petrov</p>
-	        <p>Skype: ivan123</p> 
-	        <p>Phone: (123) 456-7892</p>
-	        <a href="mailto:#">123@gmail.com</a>
+	        <p>Name: Daria Bondarenko</p>
+	        <p>Skype: daria</p> 
+	        <p>Phone: (123) 456-7890</p>
 	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
 	      </div>
 	    </div>
@@ -61,7 +67,7 @@
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
 	    <div class="thumbnail">
-	      <img src="../static/images/pic1.jpg" width="100px" height="100px">
+	      <img src="../static/images/pic1.jpg" width="100px" height="100px" class="img-circle">
 	      <div class="caption">
 	        <h3> Manager</h3>
 	        <p>Name: Alex Ivanov</p>
@@ -76,13 +82,13 @@
 	<div class="row">
 	  <div class="col-sm-6 col-md-4">
 	    <div class="thumbnail">
-	      <img src="../static/images/pic3.jpg" width="100px" height="100px">
+	      <img src="../static/images/pic5.jpg" width="100px" height="100px" class="img-circle">
 	      <div class="caption">
 	        <h3>Founder</h3>
-	        <p>Name: Daria Bondarenko</p>
-	        <p>Skype: daria</p> 
-	        <p>Phone: (123) 456-7890</p>
-	        <a href="mailto:#">daria123@gmail.com</a>
+	        <p>Name: Ivan Petrov</p>
+	        <p>Skype: ivan123</p> 
+	        <p>Phone: (123) 456-7892</p>
+	        <a href="mailto:#">123@gmail.com</a>
 	        <p><a href="#" class="btn btn-primary" role="button">Contact</a> 
 	      </div>
 	    </div>
