--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,13 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>ITBursa</title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <style>
+      body{background-image: url('../static/images/pic4.jpg') !important;
+      background-repeat: none; 
+      background-attachment: fixed;
+      background-size: 100%; 
+      background-position: center top}
+    </style>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
@@ -47,7 +54,9 @@
   <div class="container">
   <h1>Description</h1>
   <h2>Program</h2>
-  <p>Enroll in the latest online IT courses covering important topics in software engineering.</p>
+  <p> Python is a widely used general-purpose, high-level programming language. Its design philosophy emphasizes code readability, and its syntax allows programmers to express concepts in fewer lines of code.</p>
+  <p> Ruby is a dynamic, reflective, object-oriented, general-purpose programming language.</p>
+  <p> Enroll in the latest online IT courses covering important topics in software engineering.</p>
   <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Learn more</a></p>
   </div>
 </div>
