--- a/templates/index.html
+++ b/templates/index.html
@@ -24,18 +24,19 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="index.html">Main<span class="sr-only">(current)</span></a></li>
             <li><a href="contact.html">Contacts</a></li>
+			<li><a href="student_list.html">Students</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
     <div>
-   <div class="jumbotron">
+   <div class="jumbotron container">
   <h2>Description</h2>
   <p>Some description of ItBursa courses</p>
   <p><a class="btn btn-primary btn-lg" href="http://itbursa.com/about_us" role="button">Learn more</a></p>
 </div>
-    <div class="jumbotron">
+    <div class="jumbotron container">
   <h2>Raccoongang program courses</h2>
   <p>Some description of Raccoongang website</p>
   <p><a class="btn btn-primary btn-lg" href="http://edx.raccoongang.com" role="button">Learn more</a></p>
