--- a/templates/contact.html
+++ b/templates/contact.html
@@ -25,12 +25,13 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contacts<span class="sr-only">(current)</span></a></li>
+			<li><a href="student_list.html">Students</a></li>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-      <div class="container" align="center"> 
+      <div class="container" align="left"> 
        <div class="media">
           <div class="media-left">
             <a href="#">
