--- a/templates/contact.html
+++ b/templates/contact.html
@@ -19,45 +19,44 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#">PyBursa</a>
 	        </div>
 	        <div id="navbar" class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav">
 	            <li><a href="index.html">Main</a></li>
 	            <li class="active"><a href="contact.html">Contacts</a></li>
+	            <li><a href="student_list.html">Students</a></li>
 	          </ul>
 	        </div>
 	      </div>
 	  </nav>
+		<div class="container">
+      <div class="row">
+      	<div class="col-md-4">
+					<img src="../static/images/founder.jpg" alt="Guido van Rossum">
+          <h2>Founder</h2>
+          <p>Name: <b class="marker">Guido</b></p>
+          <p>Skype: <b class="marker">example_guido_1999</b></p>
+          <p>Email: <b class="marker">guido@mail.ru</b></p>
+          <p>Phone: <b class="marker">+1-234-567-789-0</b></p>
+        </div>
 
-			<div class="container">
-	      <div class="row">
-	      	<div class="col-md-4">
-						<img src="../static/images/founder.jpg" alt="Guido van Rossum">
-	          <h2>Founder</h2>
-	          <p>Name: <b class="marker">Guido</b></p>
-	          <p>Skype: <b class="marker">example_guido_1999</b></p>
-	          <p>Email: <b class="marker">guido@mail.ru</b></p>
-	          <p>Phone: <b class="marker">+1-234-567-789-0</b></p>
-	        </div>
-
-	        <div class="col-md-4">
-						<img src="../static/images/teacher.jpg" alt="Radchenko Alex">
-	          <h2>Director</h2>
-	          <p>Name: <b class="marker">Alexey Radchenko</b></p>
-	          <p>Skype: <b class="marker">superuser.do</b></p>
-	          <p>Email: <b class="marker">superuser@linux.com</b></p>
-	          <p>Phone: <b class="marker">+380-234-5****</b></p>
-	        </div>
-		      <div class="col-md-4">
-						<img src="../static/images/assistant.jpg" alt="Persianova Olena">
-		        <h2>Manager</h2>
-		       	<p>Name: <b class="marker">Olena Persianova</b></p>
-	          <p>Skype: <b class="marker">real_test_skype</b></p>
-	          <p>Email: <b class="marker">somerealemail@gmail.com</b></p>
-	          <p>Phone: <b class="marker">+380-***-*****</b></p>
-		      </div>
+        <div class="col-md-4">
+					<img src="../static/images/teacher.jpg" alt="Radchenko Alex">
+          <h2>Director</h2>
+          <p>Name: <b class="marker">Alexey Radchenko</b></p>
+          <p>Skype: <b class="marker">superuser.do</b></p>
+          <p>Email: <b class="marker">superuser@linux.com</b></p>
+          <p>Phone: <b class="marker">+380-234-5****</b></p>
+        </div>
+	      <div class="col-md-4">
+					<img src="../static/images/assistant.jpg" alt="Persianova Olena">
+	        <h2>Manager</h2>
+	       	<p>Name: <b class="marker">Olena Persianova</b></p>
+          <p>Skype: <b class="marker">real_test_skype</b></p>
+          <p>Email: <b class="marker">somerealemail@gmail.com</b></p>
+          <p>Phone: <b class="marker">+380-***-*****</b></p>
 	      </div>
       </div>
+    </div>
 	</body>
 </html>
