--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,9 @@
                 "collapse" type="button"><span class="sr-only">Toggle
                 navigation</span> <span class="icon-bar"></span> <span class=
                 "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="index.html">Main</a> <a class=
-                "navbar-brand" href="contact.html">Contacts</a>
+                <a class="navbar-brand" href="index.html">Main</a>
+                <a class="navbar-brand" href="contact.html">Contacts</a>
+                <a class="navbar-brand" href="student_detail.html">Students</a>
             </div>
             <div class="navbar-collapse collapse" id="navbar">
                 <form class="navbar-form navbar-right">
@@ -90,9 +91,9 @@
             </div>
         </div>
         <div class="media">
-            <iframe allowfullscreen="true" frameborder="0" height="350" src=
+            <!--<iframe allowfullscreen="true" frameborder="0" height="350" src=
             "http://coub.com/embed/acw5gmi?muted=false&autostart=true&originalSize=false&hideTopBar=true&startWithHD=true"
-            width="320"></iframe>
+            width="320"></iframe>-->
         </div>
     </div>
     <div class="container" role="main">
