--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ksenia Kolomiets">
     <link rel="icon" href="../static/images/favicon.ico">
 
-    <title>Students</title>
+    <title>Student Details</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -55,67 +55,52 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1 class="starter-template">Py&Django Bursa Students</h1>
+        <h1 class="starter-template">Gubkina Anna</h1>
 
       </div>
 
     <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Students List</div>
+      <div class="panel-heading">Student Details</div>
 
       <!-- Table -->
       <table class="table">
-      <thead>
-      <tr>
-      <th>No</th>
-      <th>Surname</th>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Skype</th>
-      </tr>
-      </thead>
       <tbody>
       <tr>
-      <td><a href="student_detail.html">1</a></td>
+      <td>Surname</td>
       <td>Gubkina</td>
+      </tr>
+      <tr>
+      <td>Name</td>
       <td>Anna</td>
+      </tr>
+      <tr>
+      <td>Patronymic</td>
+      <td>Sergeevna</td>
+      </tr>
+      <tr>
+      <td>Birth Date</td>
+      <td>15 February 1980</td>
+      </tr>
+      <tr>
+      <td>Address</td>
       <td>Kharkov, Ivanova, 1</td>
+      </tr>
+      <tr>
+      <td>E-mail</td>
+      <td>agubkina@gmail.com</td>
+      </tr>
+      <tr>
+      <td>Skype</td>
       <td>a_gubkina</td>
       </tr>
       <tr>
-      <td>2</td>
-      <td>Gubkin</td>
-      <td>Ivan</td>
-      <td>Kharkov, Ivanova, 1</td>
-      <td>i.gubkin</td>
+      <td>Average Grade</td>
+      <td>4.8</td>
       </tr>
       <tr>
-      <td>3</td>
-      <td>Ivanov</td>
-      <td>Andrey</td>
-      <td>Kharkov, Sumskaya, 11</td>
-      <td>andrey_i</td>
-      </tr>
-      <tr>
-      <td>4</td>
-      <td>Petrov</td>
-      <td>Bogdan</td>
-      <td>Kharkov, Lenina, 15</td>
-      <td>petrov</td>
-      </tr>
-      <tr>
-      <td>5</td>
-      <td>Sidirov</td>
-      <td>Alex</td>
-      <td>Kharkov, Proskuri, 3</td>
-      <td>a-sidirov</td>
-      </tr>
-      <tr>
-      <td>6</td>
-      <td>Lilkina</td>
-      <td>Svetlana</td>
-      <td>Kiev,Khreshatik, 1</td>
-      <td>sv.lil</td>
+      <td>Rating</td>
+      <td>35</td>
       </tr>
       </tbody>
       </table>
