--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			<h1>Guido van Rossum</h1>
 			<img src="../static/images/founder.jpg"><br>
-			<table class="table  table-bordered">
+			<table class="table  table-striped">
           <tbody>
 						<tr>
 							<td>Surname</td>
@@ -52,8 +52,8 @@
           </tbody>
 			</table>
 
-			<p>Performance</p>
-			<table class="table  table-bordered">
+			<p class="lead">Performance</p>
+			<table class="table table-condensed">
 				<thead>
           <tr>
             <th>Course name</th>
@@ -67,24 +67,24 @@
 						<td rowspan="6">Python basics</td>
 						<td rowspan="3">Week 1</td>
 						<td>Tests - loop instructions</td>
-						<td>96%</td>
+						<td class="success">96%</td>
 					</tr>
 					<tr>
 						<td>Problem task 1 - reversed string</td>
-						<td>100%</td>
+						<td class="success">100%</td>
 					</tr>
 					<tr>
 						<td>Problem task 2 - magic</td>
-						<td>78%</td>
+						<td class="warning">78%</td>
 					</tr>
 					<tr>
 						<td rowspan=2>Week2</td>
 						<td>Tests - Django unchained</td>
-						<td>80%</td>
+						<td class="info">80%</td>
 					</tr>
 					<tr>
 						<td>Problem task 3 - more black magic with Django</td>
-						<td>100%</td>
+						<td class="danger">30%</td>
 					</tr>
         </tbody>
 			</table>
