--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -44,9 +44,8 @@
               <th>Skype</th>
             </tr>
           </thead>
-          <tbody>
-            <tr class="clickable-row" data-href="student_detail.html">
-              <td>1</td>
+            <tr>
+              <td><a href="student_detail.html">1</a></td>
               <td>van Rossum</td>
               <td>Guido</td>
               <td>Ukraine, Kharkov, Lenina avenue 43</td>
@@ -80,10 +79,8 @@
               <td>Ukraine, Kharkov, Pushkinskaya st, 7/8</td>
               <td>objective_c_super_user</td>
             </tr>
-          </tbody>
         </table>
       </div>
-
     </div>
 	</body>
 
