st_list withott hernja

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,7 +27,7 @@
                 "icon-bar"></span> <span class="icon-bar"></span></button>
                 <a class="navbar-brand" href="index.html">Main</a>
                 <a class="navbar-brand" href="contact.html">Contacts</a>
-                <a class="navbar-brand" href="student_detail.html">Students</a>
+                <a class="navbar-brand" href="student_list.html">Students</a>
             </div>
         </div>
     </nav>
