--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -6,7 +6,7 @@
     <meta content="" name="description">
     <meta content="Orest Stetsiak" name="author">
     <link href="../static/images/favicon.png" rel="icon">
-    <title>Student details</title>
+    <title>Students</title><!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
     <link href="../static/css/style.css" rel="stylesheet">
     <link href="../static/css/jumbotron.css" rel="stylesheet">
@@ -28,76 +28,56 @@
     </nav>
     <div class="jumbotron">
         <div class="container">
-            <h2>Narendra Modi</h2>
+            <h2>PyBursa students list</h2>
             <h6>group started Nov 19, 2015</h6>
         </div>
 
     <div class="container" role="main">
         <h2>Program</h2>
-
-
-
-
-
-
-
-
-
-
-
-
-
         <div class="table-responsive">
             <table class="table table-striped" width="10">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 <tbody>
                     <tr>
-                        <td>Surname</td>
+                        <th>No</th>
+                        <th>Surname</th>
+                        <th>Name</th>
+                        <th>Address</th>
+                        <th>Skype</th>
+                    </tr>
+                    <tr>
+                        <td><a href="student_detail.html">1</a></td>
                         <td>Narendra</td>
-                    </tr>
-                    <tr>
-                        <td>Name</td>
                         <td>Modi</td>
-                    </tr>
-                    <tr>
-                        <td>Patronymic</td>
-                        <td>Damodardas</td>
-                    </tr>
-                    <tr>
-                        <td>Birth Date</td>
-                        <td>17/09/1950</td>
-                    </tr>
-                    <tr>
-                        <td>Address</td>
                         <td>2820 Church Street Atwater, CA 95301</td>
-                    </tr>
-                    <tr>
-                        <td>E-mail</td>
-                        <td><a href="mailto:narendra_modi@pybursa.com" target="_top">narendra_modi@pybursa.com</a></td>
-                        
-                    </tr>
-                    <tr>
-                        <td>Skype</td>
                         <td>narendra_modi</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Jeff</td>
+                        <td>Bezos</td>
+                        <td>7252 Cedar Court Dorchester Center, MA 02124</td>
+                        <td>jeff_bezos</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Jamie</td>
+                        <td>Dimon</td>
+                        <td>3093 6th Street WestErie, PA 16506</td>
+                        <td>jamie_dimon</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Rex</td>
+                        <td>Tillerson</td>
+                        <td>106 Queen Street Ogden, UT 84404</td>
+                        <td>rex_tillerson</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>Mario</td>
+                        <td>Draghi</td>
+                        <td>240 Roosevelt Avenue Butler, PA 16001</td>
+                        <td>mario_draghi</td>
                     </tr>
                     </tbody>
             </table>
