--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                 "icon-bar"></span> <span class="icon-bar"></span></button>
                 <a class="navbar-brand" href="index.html">Main</a>
                 <a class="navbar-brand" href="contact.html">Contacts</a>
-                <a class="navbar-brand" href="student_detail.html">Students</a>
+                <a class="navbar-brand" href="student_list.html">Students</a>
             </div>
             <div class="navbar-collapse collapse" id="navbar">
                 <form class="navbar-form navbar-right">
