--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="container">
 			<h1>Guido van Rossum</h1>
-			<img src="../static/images/founder.jpg"><br>
+			<img src="../static/images/founder.jpg" class="img-circle">
 			<table class="table  table-striped">
           <tbody>
 						<tr>
