--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -24,7 +24,7 @@
             <li><a href="contact.html">Contacts</a></li>
             <li class="active"><a href="student_list.html">Students</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
 
