--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 		<link rel="stylesheet" type="text/css" href="../static/css/style.css">
@@ -8,6 +9,26 @@
 		<title>Student details</title>
 	</head>
 	<body>
+		<nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="index.html">Main</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li class="active"><a href="student_list.html">Students</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
 		<div class="container">
 			<h1>Guido van Rossum</h1>
 			<img src="../static/images/founder.jpg" class="img-circle">
